# mimo_fmpc_socp

./: .gitignore  README.md  pyproject.toml  setup.py
gp/: fgp_training_data_aroundFig8.py  fgp_training_data_sim_ext.py  generate_gpmpc_gps.py  mpc_experiment.py  mpc_experiment.sh  mpc_quad_gp_training_data.py  training_flat_gps.py
gp/config_overrides/: gpmpc_acados_TP_training.yaml  quadrotor_2D_attitude_tracking.yaml
gp/fgp/: normalization_arr.npy
gp/gpmpc_data/: best_model_P.pth  best_model_T.pth  data.npz
runs_paper/: README_MONTE_CARLO.md  evaluate_FMPC_SOCP.py  launch_viewer.sh  minimal_gpmpc_tp.py  monte_carlo_plotting.py  monte_carlo_viewer.py  mpc_experiment_paper.py  plot_hardware_consistent.py  regen_plots.sh  regenerate_plots.py  run_exp_paper.py  run_exp_paper_monte_carlo.py  run_exp_thesis.py  run_fmpc_socp_only.py  run_fmpc_socp_profile.py  run_fmpc_socp_profile.py.lprof  run_paper_experiments.sh  run_profiler.sh  view_monte_carlo_results.py
runs_paper/config_overrides_constrained/: fmpc_ext_quadrotor_2D_attitude_tracking.yaml  fmpc_socp_quadrotor_2D_attitude_tracking.yaml  gpmpc_acados_TP_quadrotor_2D_attitude_tracking.yaml  mpc_quadrotor_2D_attitude_tracking.yaml  quadrotor_2D_attitude_tracking.yaml
runs_paper/config_overrides_fast/: fmpc_ext_quadrotor_2D_attitude_tracking.yaml  fmpc_socp_quadrotor_2D_attitude_tracking.yaml  gpmpc_acados_TP_quadrotor_2D_attitude_tracking.yaml  mpc_quadrotor_2D_attitude_tracking.yaml  quadrotor_2D_attitude_tracking.yaml
runs_paper/config_overrides_fast_random/: quadrotor_2D_attitude_tracking.yaml
(+79 files in other folders)
