[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safe_control_gym"
version = "2.0.0"
description = "Multi-input Second Order Cone Safety Filtering for Constrained Learning-based Flat Model Predictive Control"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
    {name = "University of Toronto Institute for Aerospace Studies"},
]

dependencies = [
    "matplotlib",
    "munch",
    "pyyaml",
    "imageio",
    "dict-deep",
    "scikit-optimize",
    "scikit-learn",
    "gymnasium",
    "torch",
    "gpytorch==1.13",
    "tensorboard",
    "casadi",
    "pybullet",
    "numpy",
    "scipy",
    "cvxpy",
    "cvxpygen",  # Code generation for CVXPY problems (https://github.com/cvxgrp/cvxpygen)
    "Mosek",     # Commercial SOCP solver (requires license)
    "clarabel",  # Open-source SOCP solver (https://github.com/oxfordcontrol/Clarabel.rs)
    "termcolor",
    "pytest",
    "pre-commit",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/utiasDSL/mimo_fmpc_socp"
Repository = "https://github.com/utiasDSL/mimo_fmpc_socp"
Documentation = "https://github.com/utiasDSL/mimo_fmpc_socp/blob/main/README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.isort]
profile = "black"
line_length = 110

[tool.autopep8]
max_line_length = 110
ignore = ["E501"]
